modules/gdscript/tests/scripts/analyzer/errors/function_return_type_invalid_covariance_1.gd
class A:
	func f() -> Node:
		return null

class B extends A:
	func f() -> Object:
		return null

func test():
	pass
